Support for Umbraco 12.3.6 and above, including Delivery Api and QueryString
Support for Umbraco 12.3.6 and above, including Delivery Api and QueryString

--- a/src/Our.Umbraco.Meganav/Web/UI/App_Plugins/Meganav/backoffice/dialogs/settingsDialog.link.html
+++ b/src/Our.Umbraco.Meganav/Web/UI/App_Plugins/Meganav/backoffice/dialogs/settingsDialog.link.html
@@ -20,8 +20,8 @@
                            localize="placeholder"
                            placeholder="@placeholders_anchor"
                            class="umb-property-editor umb-textstring"
-                           ng-model="model.target.anchor"
-                           id="anchor" />
+                           ng-model="model.target.queryString"
+                           id="queryString" />
 
                     <datalist id="anchors">
                         <option value="{{a}}" ng-repeat="a in anchorValues"></option>
